# Remove-Master-BG

./: .env  .gitignore  .htaccess  requirements.txt  requirements_king.txt
Master/: asgi.py  settings.py  urls.py  wsgi.py
RemoveBG/: admin.py  apps.py  models.py  urls.py  views.py
RemoveBG/migrations/: 0001_initial.py
RemoveBG/service/: remove.py  send_email.py
RemoveBG/service/layout-email/: layout_email_inside.txt
RemoveBG/static/css/: admin_custom.css  contact.css  donwload.css  styles.css
RemoveBG/static/js/: contact.js  upload.js
RemoveBG/templates/: contact.html  file_download.html  index.html
RemoveBG/templates/admin/: base_site.html  login.html
RemoveBG/templates/registration/: login.html
pytest-foobar/: LICENSE  README.rst  mkdocs.yml  pyproject.toml
pytest-foobar/docs/: index.md
pytest-foobar/src/pytest_foobar/: plugin.py
pytest-foobar/tests/: test_foobar.py
